// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`branches default to release branches 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: upgrade-main
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 * * *
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: main
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Upgrade dependencies
        run: npx projen upgrade
      - name: Create Patch
        run: |-
          git add .
          git diff --patch --staged > .upgrade.tmp.patch
      - name: Upload patch
        uses: actions/upload-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: .upgrade.tmp.patch
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: write
      pull-requests: write
      actions: write
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: main
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Download patch
        uses: actions/download-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/.upgrade.tmp.patch ] && git apply \${{ runner.temp
          }}/.upgrade.tmp.patch || echo \\"Empty patch. Skipping.\\"'
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v3
        with:
          token: \${{ secrets.PROJEN_SECRET }}
          commit-message: >-
            chore(deps): upgrade dependencies


            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-main\\" workflow*
          branch: github-actions/upgrade-main
          title: \\"chore(deps): upgrade dependencies\\"
          body: >-
            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-main\\" workflow*
          author: github-actions <github-actions@github.com>
          committer: github-actions <github-actions@github.com>
          signoff: true
      - name: Trigger build.yml workflow
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: 'curl -i --fail -X POST -H \\"Accept: application/vnd.github.v3+json\\" -H
          \\"Authorization: token \${GITHUB_TOKEN}\\" --data
          \\"{\\\\\\"ref\\\\\\":\\\\\\"$GITHUB_REF_NAME\\\\\\"}\\" https://api.github.com/repos/\${{
          github.repository }}/actions/workflows/build.yml/dispatches'
"
`;

exports[`branches default to release branches 2`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: upgrade-branch1
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 * * *
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: branch1
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Upgrade dependencies
        run: npx projen upgrade
      - name: Create Patch
        run: |-
          git add .
          git diff --patch --staged > .upgrade.tmp.patch
      - name: Upload patch
        uses: actions/upload-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: .upgrade.tmp.patch
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: write
      pull-requests: write
      actions: write
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: branch1
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Download patch
        uses: actions/download-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/.upgrade.tmp.patch ] && git apply \${{ runner.temp
          }}/.upgrade.tmp.patch || echo \\"Empty patch. Skipping.\\"'
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v3
        with:
          token: \${{ secrets.PROJEN_SECRET }}
          commit-message: >-
            chore(deps): upgrade dependencies


            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-branch1\\" workflow*
          branch: github-actions/upgrade-branch1
          title: \\"chore(deps): upgrade dependencies\\"
          body: >-
            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-branch1\\" workflow*
          author: github-actions <github-actions@github.com>
          committer: github-actions <github-actions@github.com>
          signoff: true
      - name: Trigger build.yml workflow
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: 'curl -i --fail -X POST -H \\"Accept: application/vnd.github.v3+json\\" -H
          \\"Authorization: token \${GITHUB_TOKEN}\\" --data
          \\"{\\\\\\"ref\\\\\\":\\\\\\"$GITHUB_REF_NAME\\\\\\"}\\" https://api.github.com/repos/\${{
          github.repository }}/actions/workflows/build.yml/dispatches'
"
`;

exports[`branches default to release branches 3`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: upgrade-branch2
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 * * *
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: branch2
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Upgrade dependencies
        run: npx projen upgrade
      - name: Create Patch
        run: |-
          git add .
          git diff --patch --staged > .upgrade.tmp.patch
      - name: Upload patch
        uses: actions/upload-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: .upgrade.tmp.patch
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: write
      pull-requests: write
      actions: write
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: branch2
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Download patch
        uses: actions/download-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/.upgrade.tmp.patch ] && git apply \${{ runner.temp
          }}/.upgrade.tmp.patch || echo \\"Empty patch. Skipping.\\"'
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v3
        with:
          token: \${{ secrets.PROJEN_SECRET }}
          commit-message: >-
            chore(deps): upgrade dependencies


            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-branch2\\" workflow*
          branch: github-actions/upgrade-branch2
          title: \\"chore(deps): upgrade dependencies\\"
          body: >-
            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-branch2\\" workflow*
          author: github-actions <github-actions@github.com>
          committer: github-actions <github-actions@github.com>
          signoff: true
      - name: Trigger build.yml workflow
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: 'curl -i --fail -X POST -H \\"Accept: application/vnd.github.v3+json\\" -H
          \\"Authorization: token \${GITHUB_TOKEN}\\" --data
          \\"{\\\\\\"ref\\\\\\":\\\\\\"$GITHUB_REF_NAME\\\\\\"}\\" https://api.github.com/repos/\${{
          github.repository }}/actions/workflows/build.yml/dispatches'
"
`;

exports[`can upgrade multiple branches 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: upgrade-branch1
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 * * *
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: branch1
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Upgrade dependencies
        run: npx projen upgrade
      - name: Create Patch
        run: |-
          git add .
          git diff --patch --staged > .upgrade.tmp.patch
      - name: Upload patch
        uses: actions/upload-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: .upgrade.tmp.patch
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: write
      pull-requests: write
      actions: write
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: branch1
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Download patch
        uses: actions/download-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/.upgrade.tmp.patch ] && git apply \${{ runner.temp
          }}/.upgrade.tmp.patch || echo \\"Empty patch. Skipping.\\"'
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v3
        with:
          token: \${{ secrets.PROJEN_SECRET }}
          commit-message: >-
            chore(deps): upgrade dependencies


            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-branch1\\" workflow*
          branch: github-actions/upgrade-branch1
          title: \\"chore(deps): upgrade dependencies\\"
          body: >-
            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-branch1\\" workflow*
          author: github-actions <github-actions@github.com>
          committer: github-actions <github-actions@github.com>
          signoff: true
      - name: Trigger build.yml workflow
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: 'curl -i --fail -X POST -H \\"Accept: application/vnd.github.v3+json\\" -H
          \\"Authorization: token \${GITHUB_TOKEN}\\" --data
          \\"{\\\\\\"ref\\\\\\":\\\\\\"$GITHUB_REF_NAME\\\\\\"}\\" https://api.github.com/repos/\${{
          github.repository }}/actions/workflows/build.yml/dispatches'
"
`;

exports[`can upgrade multiple branches 2`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: upgrade-branch2
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 * * *
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: branch2
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Upgrade dependencies
        run: npx projen upgrade
      - name: Create Patch
        run: |-
          git add .
          git diff --patch --staged > .upgrade.tmp.patch
      - name: Upload patch
        uses: actions/upload-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: .upgrade.tmp.patch
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: write
      pull-requests: write
      actions: write
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: branch2
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Download patch
        uses: actions/download-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/.upgrade.tmp.patch ] && git apply \${{ runner.temp
          }}/.upgrade.tmp.patch || echo \\"Empty patch. Skipping.\\"'
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v3
        with:
          token: \${{ secrets.PROJEN_SECRET }}
          commit-message: >-
            chore(deps): upgrade dependencies


            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-branch2\\" workflow*
          branch: github-actions/upgrade-branch2
          title: \\"chore(deps): upgrade dependencies\\"
          body: >-
            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-branch2\\" workflow*
          author: github-actions <github-actions@github.com>
          committer: github-actions <github-actions@github.com>
          signoff: true
      - name: Trigger build.yml workflow
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: 'curl -i --fail -X POST -H \\"Accept: application/vnd.github.v3+json\\" -H
          \\"Authorization: token \${GITHUB_TOKEN}\\" --data
          \\"{\\\\\\"ref\\\\\\":\\\\\\"$GITHUB_REF_NAME\\\\\\"}\\" https://api.github.com/repos/\${{
          github.repository }}/actions/workflows/build.yml/dispatches'
"
`;

exports[`considers branches added post project instantiation 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: upgrade-main
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 * * *
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: main
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Upgrade dependencies
        run: npx projen upgrade
      - name: Create Patch
        run: |-
          git add .
          git diff --patch --staged > .upgrade.tmp.patch
      - name: Upload patch
        uses: actions/upload-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: .upgrade.tmp.patch
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: write
      pull-requests: write
      actions: write
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: main
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Download patch
        uses: actions/download-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/.upgrade.tmp.patch ] && git apply \${{ runner.temp
          }}/.upgrade.tmp.patch || echo \\"Empty patch. Skipping.\\"'
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v3
        with:
          token: \${{ secrets.PROJEN_SECRET }}
          commit-message: >-
            chore(deps): upgrade dependencies


            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-main\\" workflow*
          branch: github-actions/upgrade-main
          title: \\"chore(deps): upgrade dependencies\\"
          body: >-
            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-main\\" workflow*
          author: github-actions <github-actions@github.com>
          committer: github-actions <github-actions@github.com>
          signoff: true
      - name: Trigger build.yml workflow
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: 'curl -i --fail -X POST -H \\"Accept: application/vnd.github.v3+json\\" -H
          \\"Authorization: token \${GITHUB_TOKEN}\\" --data
          \\"{\\\\\\"ref\\\\\\":\\\\\\"$GITHUB_REF_NAME\\\\\\"}\\" https://api.github.com/repos/\${{
          github.repository }}/actions/workflows/build.yml/dispatches'
"
`;

exports[`considers branches added post project instantiation 2`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: upgrade-branch1
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 * * *
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: branch1
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Upgrade dependencies
        run: npx projen upgrade
      - name: Create Patch
        run: |-
          git add .
          git diff --patch --staged > .upgrade.tmp.patch
      - name: Upload patch
        uses: actions/upload-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: .upgrade.tmp.patch
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: write
      pull-requests: write
      actions: write
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: branch1
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Download patch
        uses: actions/download-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/.upgrade.tmp.patch ] && git apply \${{ runner.temp
          }}/.upgrade.tmp.patch || echo \\"Empty patch. Skipping.\\"'
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v3
        with:
          token: \${{ secrets.PROJEN_SECRET }}
          commit-message: >-
            chore(deps): upgrade dependencies


            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-branch1\\" workflow*
          branch: github-actions/upgrade-branch1
          title: \\"chore(deps): upgrade dependencies\\"
          body: >-
            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-branch1\\" workflow*
          author: github-actions <github-actions@github.com>
          committer: github-actions <github-actions@github.com>
          signoff: true
      - name: Trigger build.yml workflow
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: 'curl -i --fail -X POST -H \\"Accept: application/vnd.github.v3+json\\" -H
          \\"Authorization: token \${GITHUB_TOKEN}\\" --data
          \\"{\\\\\\"ref\\\\\\":\\\\\\"$GITHUB_REF_NAME\\\\\\"}\\" https://api.github.com/repos/\${{
          github.repository }}/actions/workflows/build.yml/dispatches'
"
`;

exports[`considers branches added post project instantiation 3`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: upgrade-branch2
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 * * *
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: branch2
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Upgrade dependencies
        run: npx projen upgrade
      - name: Create Patch
        run: |-
          git add .
          git diff --patch --staged > .upgrade.tmp.patch
      - name: Upload patch
        uses: actions/upload-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: .upgrade.tmp.patch
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: write
      pull-requests: write
      actions: write
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: branch2
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Download patch
        uses: actions/download-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/.upgrade.tmp.patch ] && git apply \${{ runner.temp
          }}/.upgrade.tmp.patch || echo \\"Empty patch. Skipping.\\"'
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v3
        with:
          token: \${{ secrets.PROJEN_SECRET }}
          commit-message: >-
            chore(deps): upgrade dependencies


            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-branch2\\" workflow*
          branch: github-actions/upgrade-branch2
          title: \\"chore(deps): upgrade dependencies\\"
          body: >-
            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-branch2\\" workflow*
          author: github-actions <github-actions@github.com>
          committer: github-actions <github-actions@github.com>
          signoff: true
      - name: Trigger build.yml workflow
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: 'curl -i --fail -X POST -H \\"Accept: application/vnd.github.v3+json\\" -H
          \\"Authorization: token \${GITHUB_TOKEN}\\" --data
          \\"{\\\\\\"ref\\\\\\":\\\\\\"$GITHUB_REF_NAME\\\\\\"}\\" https://api.github.com/repos/\${{
          github.repository }}/actions/workflows/build.yml/dispatches'
"
`;

exports[`custom options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: upgrade-main
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 1 * *
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: main
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Upgrade dependencies
        run: npx projen upgrade
      - name: Create Patch
        run: |-
          git add .
          git diff --patch --staged > .upgrade.tmp.patch
      - name: Upload patch
        uses: actions/upload-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: .upgrade.tmp.patch
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: write
      pull-requests: write
      actions: write
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: main
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Download patch
        uses: actions/download-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/.upgrade.tmp.patch ] && git apply \${{ runner.temp
          }}/.upgrade.tmp.patch || echo \\"Empty patch. Skipping.\\"'
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v3
        with:
          token: \${{ secrets.PROJEN_SECRET }}
          commit-message: >-
            chore(deps): upgrade dependencies


            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-main\\" workflow*
          branch: github-actions/upgrade-main
          title: \\"chore(deps): upgrade dependencies\\"
          body: >-
            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-main\\" workflow*
          author: github-actions <github-actions@github.com>
          committer: github-actions <github-actions@github.com>
          signoff: true
      - name: Trigger build.yml workflow
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: 'curl -i --fail -X POST -H \\"Accept: application/vnd.github.v3+json\\" -H
          \\"Authorization: token \${GITHUB_TOKEN}\\" --data
          \\"{\\\\\\"ref\\\\\\":\\\\\\"$GITHUB_REF_NAME\\\\\\"}\\" https://api.github.com/repos/\${{
          github.repository }}/actions/workflows/build.yml/dispatches'
"
`;

exports[`default options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: upgrade-main
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 * * *
jobs:
  upgrade:
    name: Upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: main
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Install dependencies
        run: yarn install --check-files --frozen-lockfile
      - name: Upgrade dependencies
        run: npx projen upgrade
      - name: Create Patch
        run: |-
          git add .
          git diff --patch --staged > .upgrade.tmp.patch
      - name: Upload patch
        uses: actions/upload-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: .upgrade.tmp.patch
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: write
      pull-requests: write
      actions: write
    steps:
      - name: Checkout
        uses: actions/checkout@v2
        with:
          ref: main
      - name: Set git identity
        run: |-
          git config --global init.defaultBranch main
          git config user.name \\"github-actions\\"
          git config user.email \\"github-actions@github.com\\"
      - name: Download patch
        uses: actions/download-artifact@v2
        with:
          name: .upgrade.tmp.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/.upgrade.tmp.patch ] && git apply \${{ runner.temp
          }}/.upgrade.tmp.patch || echo \\"Empty patch. Skipping.\\"'
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v3
        with:
          token: \${{ secrets.PROJEN_SECRET }}
          commit-message: >-
            chore(deps): upgrade dependencies


            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-main\\" workflow*
          branch: github-actions/upgrade-main
          title: \\"chore(deps): upgrade dependencies\\"
          body: >-
            Upgrades project dependencies. See details in [workflow run].


            [Workflow Run]: https://github.com/\${{ github.repository }}/actions/runs/\${{ github.run_id }}


            ------


            *Automatically created by projen via the \\"upgrade-main\\" workflow*
          author: github-actions <github-actions@github.com>
          committer: github-actions <github-actions@github.com>
          signoff: true
      - name: Trigger build.yml workflow
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: 'curl -i --fail -X POST -H \\"Accept: application/vnd.github.v3+json\\" -H
          \\"Authorization: token \${GITHUB_TOKEN}\\" --data
          \\"{\\\\\\"ref\\\\\\":\\\\\\"$GITHUB_REF_NAME\\\\\\"}\\" https://api.github.com/repos/\${{
          github.repository }}/actions/workflows/build.yml/dispatches'
"
`;
